...
  "register_email_already_taken": "There's already an account with the given email. Please login or try entering another one.",
  "register_network_error": "Internet connection is required to register. Please check your connection status and try again.",
  "register_error": "Oops, something went wrong. Please try again.",
  "register_incomplete_error": "All fields are required. Please complete them.",
  "home_page_title": "Welcome",
  "learn_page_title": "Learn",
  "search_page_title": "Search",
  "editor_page_title": "Editor",
  "user_page_title": "Account and Settings",
  "search_page_header_1": "Tell us what you are looking for.",
  "search_page_header_2": "Every field is optional. Freely choose your filters and sorting options.",
  "course_name": "Course name",
  "course_name_hint": "e.g. Basic English for Italian Speakers",
...
  "yes": "Yes",
  "no": "No ",
  "home": "Home",
  "learn": "Learn",
  "editor": "Editor",
  "account": "Account",
  "ok": "OK",
  "for_everyone": "For everyone",
  "for_experts": "For experts",
  "one_hour_less": "1 hour or less",
  "one_two_hours": "1-2 hours",
  "two_three_hours": "2-3 hours",
  "three_hours_more": "3 hours or more",
  "lessons_only": "Lessons only",
...
  "search_results_header": "These are the courses that match your search",
  "no_search_results": "It seems there are no corresponding courses. Search for a new one!",
  "uploaded_on": "Uploaded on: ",
  "public": "Public",
  "private": "Private",
  "published_on": "Published on: ",
  "enroll_in": "Enroll in Course",
  "unsubscribe": "Unsubscribe",
  "by": "by ",
  "reviews": "Reviews",
  "no_reviews_yet": "There are no reviews yet.",
  "block": "Block",
  "text": "Text",
  "multimedia": "Multimedia",
...
  "has_granted_access": "has granted access to the following course:",
  "has_published_new_course": "has published a new course:",
  "accept": "Accept",
  "deny": "Deny",
  "accept_enrollment_confirmation": "Are you sure you want to allow the access to your course?",
  "deny_enrollment_confirmation": "Are you sure you want to deny the access to your course?",
  "request_access": "Request Access",
  "already_requested_access_error": "You have already requested access to this course, and the course author has to review it. Please wait and try again.",
  "rate": "Rate",
  "rated": "Rated",
  "your_review": "Your review",
  "review": "Review",
  "review_headliner_to_rate": "What do you think of this course?",
  "review_headliner_rated": "Here is your review!",
  "review_title": "Review title",
  "title": "Title",
  "okay": "Okay!",
  "follow": "Follow",
  "unfollow": "Unfollow",
  "users_who_follow": "Users who follow ",
  "users_who_are_followed_by": "Users who are followed by ",
  "get_certificate": "Get certificate",
  "course_completion_certificate": "Course Completion Certificate",
  "assigned_to": "assigned to:",
  "for_successfully_completing_course": "for successfully completing the following course:",
...
