...
  "yes": "Yes",
  "no": "No ",
  "home": "Home",
  "learn": "Learn",
  "editor": "Editor",
  "account": "Account",
  "ok": "OK",
  "for_everyone": "For everyone",
  "for_experts": "For experts",
  "one_hour_less": "1 hour or less",
  "one_two_hours": "1-2 hours",
  "two_three_hours": "2-3 hours",
  "three_hours_more": "3 hours or more",
...
  "course_name_za": "Course name (reverse alphabetical)",
  "author_username_az": "Author username (alphabetical)",
  "author_username_za": "Author username (reverse alphabetical)",
  "best_rated": "Best rated",
  "cancel": "Cancel",
  "english": "English",
  "italian": "Italian",
  "followers": "followers",
  "following": "following",
  "account_settings_title": "Account Settings",
  "account_settings_description": "Browse and update your user data and preferences.",
  "notification_settings_title": "Notification Settings",
  "notification_settings_description": "Choose which notifications you wish to receive.",
...
  "confirm": "Confirm",
  "learned": "Learned!",
  "learned_all": "You learned everything!",
  "get_qr_code": "Get QR Code",
  "notifications": "Notifications",
  "no_notifications": "There are no notifications to show.",
  "no_users": "There are no users to show.",
  "has_requested_access": "has requested access to the following course:",
  "has_granted_access": "has granted access to the following course:",
  "has_published_new_course": "has published a new course:",
  "accept": "Accept",
  "deny": "Deny",
  "accept_enrollment_confirmation": "Are you sure you want to allow the access to your course?",
...
  "date": "Date",
  "application_settings_title": "Application Settings",
  "application_settings_description": "Modify your experience with bloQo to best use the application.",
  "language": "Language",
  "theme": "Theme",
  "purple_orchid": "Purple Orchid",
  "ocean_cornflower": "Ocean Cornflower",
  "section_is_not_completed": "You haven't finished all the quizzes.",
  "completed_section": "Completed",
  "course_completed": "Course completed!",
  "cannot_unsubscribe_course_completed": "You already completed the course, so you cannot unsubscribe to it.",
  "error_review": "You cannot publish an incomplete review!",
  "error_quiz_question_empty": "A quiz question must not be empty.",
...
