...
  "register_email_already_taken": "Un altro account è già iscritto a bloQo con l'indirizzo email fornito. Scegli un altro indirizzo email.",
  "register_network_error": "La connessione a Internet è necessaria per registrarsi. Assicurati che il tuo dispositivo sia connesso alla rete e riprova.",
  "register_error": "Oops, qualcosa è andato storto. Riprova.",
  "register_incomplete_error": "Tutti i campi sono richiesti. Per favore, completali.",
  "home_page_title": "Ciao",
  "learn_page_title": "Impara",
  "search_page_title": "Cerca",
  "editor_page_title": "Crea",
  "user_page_title": "Account e Impostazioni",
  "search_page_header_1": "Facci sapere cosa stai cercando.",
  "search_page_header_2": "Ogni campo è opzionale. Scegli liberamente i filtri e l'ordinamento.",
  "course_name": "Nome del corso",
  "course_name_hint": "es. Corso base di Inglese per Italiani",
...
